# LKAppV1

./: .gitignore  Account.qrc  Admin.qrc  CMakeLists.txt  ChargerSetup.qrc  Installation.qrc  Ladeklubben-mac.pro  Ladeklubben.pri  Ladeklubben.pro  Makefile  Password.qrc  PaymentWidgets.qrc  Viewpages.qrc  chargerwidgets.qrc  data.qrc  electricity.qrc  groupwidgets.qrc  guestwidgets.qrc  icons.qrc  images.qrc  main.cpp  mapwidget.qrc  pushnotification.cpp  pushnotification.h  qml.qrc  schedulewidgets.qrc  scripts.qrc  shell.nix  statwidgets.qrc  widgets.qrc
Doc/: notes.txt
QZXing/: CMakeLists.txt
QZXing/zxing/zxing/qrcode/encoder/: QREncoder.cpp
android/: AndroidManifest.xml
fonts/: config.json
ios/: Info.plist.in  exportOptions.plist
qml/: AboutUs.qml  AccountPage.qml  Active.qml  AddCharger.qml  AddSchedule.qml  AdminOrdersView.qml  Adminpage.qml  AlwaysOn.qml  BalanceSheetView.qml  BottomMenu.qml  ButtonShelf.qml  CWChargerType.qml  CWPlaceCharger.qml  CardRenew.qml  CardSubscribe.qml  CardUpdateFinish.qml  ChangePassword.qml  ChargerCntrl.qml  ChargerInfo.qml  ChargerLocation.qml  ChargerMap.qml  ChargerNotificationSetup.qml  ChargerRemoveWarning.qml  ChargerSetupView.qml  ChargerStat.qml  ChargerState.qml  DateTime.qml  DayHours.qml  EditSchedule.qml  EditUser.qml  GridCell.qml  GroupCreate.qml  GroupInvitesNotification.qml  GroupList.qml  GroupsView.qml  GuestCharge.qml  GuestChargeStats.qml  GuestConsumption.qml  GuestCost.qml  GuestElabsed.qml  (+117 more)
translations/: Ladeklubben_dk.ts  lk_dk.qm
